--- a/consignment-service/Makefile
+++ b/consignment-service/Makefile
@@ -1,3 +1,3 @@
 build:
-	protoc -I. --go_out=plugins=grpc:. \
+	protoc -I. --go_out=plugins=grpc:$(GOPATH)/src/github.com/FameedaT-Syn/shippy-microservice/consignment-service \
 		proto/consignment/consignment.proto
